--- a/scss/_subpages.scss
+++ b/scss/_subpages.scss
@@ -65,7 +65,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 100vh;
+	margin: 8em 0em 2em;
 
 	&__box {
 		display: flex;
